--- a/core/templates/core/login.html
+++ b/core/templates/core/login.html
@@ -54,7 +54,7 @@
                                     Recordarme
                                 </label>
                             </div>
-                            <a href="#" class="text-muted small">¿Olvidaste tu contraseña?</a>
+                            <a href="{% url 'recuperar_password' %}" class="text-muted small">¿Olvidaste tu contraseña?</a>
                         </div>
                         
                         <!-- Botón de inicio de sesión -->
