--- a/core/templates/core/admin/dashboard.html
+++ b/core/templates/core/admin/dashboard.html
@@ -142,7 +142,12 @@
                             <span>Ir al POS</span>
                         </a>
                     </div>
-                    {# Espacio para otro botón si se necesita #}
+                    <div class="col-6">
+                        <a href="{% url 'admin_reclamos_lista' %}" class="btn quick-action w-100 p-3 text-decoration-none d-block text-center">
+                            <i class="fas fa-comment-dots fa-2x d-block mb-2"></i>
+                            <span>Ver Reclamos</span>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
